--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["setuptools"]
-build-backend = "setuptools.build_meta"
+requires = [ "hatchling", "hatch-vcs" ]
+build-backend = "hatchling.build"
 
 [project]
 name = "ytpb-mpv"
-version = "2024.2.28"
+version = "2024.3.4"
 authors = [ { name = "Maxim Stolyarchuk" } ]
 keywords = [ "mpv", "youtube" ]
 license = { file = "LICENSE" }
