--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -4,9 +4,17 @@ build-backend = "hatchling.build"
 
 [project]
 name = "ytpb-mpv"
+description = "A socket listener to complement mpv-ytpb"
 version = "2024.3.4"
 authors = [ { name = "Maxim Stolyarchuk" } ]
 keywords = [ "mpv", "youtube" ]
+classifiers = [
+  "Development Status :: 4 - Beta",
+  "Environment :: Console",
+  "Programming Language :: Python",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
+]
 license = { file = "LICENSE" }
 requires-python = ">=3.11"
 dependencies = [
