--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -5,6 +5,7 @@ build-backend = "hatchling.build"
 [project]
 name = "ytpb-mpv"
 description = "A socket listener to complement mpv-ytpb"
+readme = "README.md"
 version = "2024.3.4"
 authors = [ { name = "Maxim Stolyarchuk" } ]
 keywords = [ "mpv", "youtube" ]
