--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -19,7 +19,7 @@ classifiers = [
 license = { file = "LICENSE" }
 requires-python = ">=3.11"
 dependencies = [
-    "ytpb",
+    "ytpb>=2024.3.27",
     "python-mpv-jsonipc>=1.2.0",
 ]
 
